index and style

--- a/shop.html
+++ b/shop.html
@@ -35,6 +35,14 @@
         <p>Save more with coupons & up to 70% off! </p>
     </section>
 
+    <!-- <section id="prduct1" class="section-p1"> This have to added from index </section> -->
+
+    <section id="pagination" class="section-p1">
+        <a href="#">1</a>
+        <a href="#">2</a>
+        <a href="#"><i class="fal fa-long-arrow-alt-right"></i></a>
+    </section>
+
     <script src="script.js"></script>
 </body>
 
