--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <ul id="navbar">
                 <li><a class="active" href="index.html">Home</a></li>
                 <li><a href="shop.html">Shop</a></li>
-                <li><a href="./Mini_Project-master/project1.html">Sell</a></li>
+                <li><a href="./project1.html">Sell</a></li>
                 <li><a href="./form.html">Sign in</a></li>
                 <li><a href="./form.html">Register</a></li>
                 <li><a href="contact.html">Contact</a></li>
