--- a/project1.html
+++ b/project1.html
@@ -31,7 +31,7 @@
 
         <ul class="nav-menu">
           <li class="nav-item">
-            <a href="../index.html" class="nav-link">Home</a>
+            <a href="./index.html" class="nav-link">Home</a>
           </li>
           <li class="nav-item">
             <a href="#featured-main-id" class="nav-link">Sell New</a>
@@ -40,10 +40,10 @@
             <a href="#letest-product-main-id" class="nav-link">Sell Used</a>
           </li>
           <li class="nav-item">
-            <a href="../cart.html" class="nav-link">Cart</a>
+            <a href="./cart.html" class="nav-link">Cart</a>
           </li>
           <li class="nav-item">
-            <a href="../form.html" class="nav-link">Sign up</a>
+            <a href="./form.html" class="nav-link">Sign up</a>
           </li>
           <li class="nav-item">
             <a href="./project1.1.html" class="nav-link" >Login</a>
